fixed alert alignments in forms and dropzone text not in vertical center

--- a/app/styles/components/dropzone.scss
+++ b/app/styles/components/dropzone.scss
@@ -11,7 +11,7 @@
 .dropzone.dropzone {
   display: flex;
   flex-flow: row wrap;
-  align-content: flex-end;
+  align-content: center;
   align-items: center;
   border: 1px solid $gray-200;
   border-radius: 4px;
